--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 <head>
   <meta charset="UTF-8">
@@ -7,163 +8,68 @@
   <meta name="keywords" content="Portfolio, Technology, Tech, Coding">
   <meta name="description" content="Rishaan's Portfolio">
   <title>About</title>
-  <style>
-    .rkLogo {
-      border-radius: 25px;
-    }
-
-    .bar {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      background-image: url('images/Banner.png');
-      background-size: cover;
-      overflow: hidden;
-    }
-
-    .barList {
-      display: inline;
-      float: left;
-    }
-
-    .barLink {
-      display: block;
-      padding: 8px;
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-weight: bold;
-      font-family: Calibri;
-    }
-
-    .active {
-      background-color: rgb(81, 0, 255);
-    }
-
-    .barList .barLink:hover {
-      background-color: blue;
-    }
-
-    body {
-      background-color: rgb(25, 27, 38);
-      margin: 0;
-    }
-
-    .horizontalLayout {
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      background-color: rgb(35, 37, 53);
-      border-radius: 25px;
-      margin: 20px;
-      margin-left: 100px;
-      margin-right: 100px;
-      margin-top: 50px;
-      margin-bottom: 50px;
-    }
-
-    .rkLogo {
-      border-radius: 25px;
-      margin-right: 50px;
-      margin-left: 50px;
-      margin-top: 50px;
-      margin-bottom: 50px;
-      width: 400px;
-      height: 400px;
-    }
-
-    .vertText {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      height: 500px;
-      width: 100vh;
-    }
-
-    .title {
-      font-size: 55px;
-      color: white;
-      font-family: Calibri;
-      margin: 0;
-      margin-top: 60px;
-      margin-bottom: 60px;
-      text-align: center;
-    }
-
-    .titleInfo {
-      font-size: 55px;
-      color: white;
-      font-family: Calibri;
-      margin: 0;
-      margin-top: 50px;
-      text-align: center;
-    }
-
-    .bodyText {
-      font-size: 30px;
-      color: white;
-      font-family: Calibri;
-      margin: 0;
-      margin-top: auto;
-      margin-bottom: auto;
-      text-align: center;
-    }
-
-    .project {
-      width: 400px;
-      height: 400px;
-    }
-
-    img.overlay {
-      align-self: flex-end;
-      height: 200px;
-      width: 400px;
-      position: absolute;
-      opacity: 70%;
-    }
-
-    h3.overlay {
-      align-self: center;
-      justify-content: center;
-      text-align: center;
-      position: absolute;
-      color: white;
-      font-family: Calibri;
-      font-weight: bold;
-    }
-
-    .projectLayout {
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-    }
-  </style>
 </head>
 
 <body>
+  <!-- Nav Bar -->
   <ul class="bar">
-    <li class="barList"><a class="barLink active" href="index.html">Home</a></li>
+    <li class="barList"><a class="barLink" style="background-color: #5e43f3ff;" href="index.html">Home</a></li>
+    <li class="barList"><a class="barLink" href="archived.html">Archived Projects</a></li>
   </ul>
-  <h1 class="title">A B O U T</h1>
+
+  <!-- About Section -->
   <div class="horizontalLayout">
-    <img class="rkLogo" src="images/rkLogo.png" alt="RK Logo">
-    <div class="vertText">
+    <img class="mainImg" src="images/rkLogo.png" alt="RK Logo">
+    <div class="verticalLayout">
       <h2 class="titleInfo">Rishaan K</h2> <br>
-      <h4 class="bodyText">This is temporary</h4>
+      <h4 class="bodyText">Lorem Ipsum</h4>
     </div>
   </div>
-  <h1 class="title">P R O J E C T S</h1>
-  <div class="horizontalLayout">
+
+  <h1 class="title">Archived Stuff</h1>
+
+  <!-- Archived Projects -->
+  <div class="horizontalLayout" style="height: 300px;">
+    <!-- Escape Rooms -->
     <div class="projectLayout">
-      <img class="project" src="images/rkLogo.png" alt="RK Logo">
-      <img class="overlay" src="images/Vignette.png" alt="Vignette">
-      <h3 class="overlay">T E M P O R A R Y</h3>
+      <img class="project" src="images/Escape.png" alt="Virtual Escape Room">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">Escape Rooms</h3>
+      <button onclick="location.href='archived.html'">Explore</button>
     </div>
+
+    <!-- Chatbot -->
     <div class="projectLayout">
-      <img class="project" src="images/BrainBattleWithBG.png" alt="Brain Battle">
-      <img class="overlay" src="images/Vignette.png" alt="Vignette">
+      <img class="project" src="images/Steve-chatbot-logo.png" alt="Chatbot">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" alt="Vignette">
+      <h3 class="overlay">Chatbot</h3>
+      <button onclick="location.href='archived.html#Chatbot'">Explore</button>
+    </div>
+
+    <!-- CLI-Calculator -->
+    <div class="projectLayout">
+      <img class="project" src="images/CLI-Calculator.png" alt="Command-Line Calculator">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" alt="Vignette">
+      <h3 class="overlay">CLI-Calculator</h3>
+      <button onclick="location.href='archived.html#CLI-Calculator'">Explore</button>
+    </div>
+
+    <!-- eCal -->
+    <div class="projectLayout">
+      <img class="project" src="images/eCal.png" alt="eCal">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" alt="Vignette">
+      <h3 class="overlay">eCal</h3>
+      <button onclick="location.href='archived.html#eCal'">Explore</button>
+    </div>
+
+    <!-- Drift Party -->
+    <div class="projectLayout">
+      <img class="project" src="images/DriftParty.png" alt="Drift Party">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-right-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">Drift Party</h3>
+      <button onclick="location.href='archived.html#DriftParty'">Explore</button>
     </div>
   </div>
 </body>
