--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <!-- Nav Bar -->
   <ul class="bar">
     <li class="barList"><a class="barLink" style="background-color: #5e43f3ff;" href="index.html">Home</a></li>
-    <li class="barList"><a class="barLink" href="archived.html">Archived Projects</a></li>
+    <li class="barList"><a class="barLink" href="projects.html">Projects</a></li>
+    <!-- <li class="barList"><a class="barLink" href="archived.html">Archived Projects</a></li> -->
   </ul>
 
   <!-- About Section -->
@@ -22,56 +23,106 @@
     <img class="mainImg" src="images/rkLogo.png" alt="RK Logo">
     <div class="verticalLayout">
       <h2 class="titleInfo">Rishaan K</h2> <br>
-      <h4 class="bodyText">Lorem Ipsum</h4>
+      <h4 class="bodyText">yap yap beep boop computing</h4>
     </div>
   </div>
 
-  <h1 class="title">Archived Stuff</h1>
+  <h1 class="title">Projects</h1>
 
-  <!-- Archived Projects -->
+  <!--  Projects -->
   <div class="horizontalLayout" style="height: 300px;">
-    <!-- Escape Rooms -->
+    <!-- Clickity Calculator -->
     <div class="projectLayout">
+      <img class="project" src="images/Replit/Calculator.png" alt="Clickity Calculator">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">Clickity Calculator</h3>
+      <button onclick="location.href='projects.html'">Explore</button>
+    </div>
+
+    <!-- Jeopardy -->
+    <div class="projectLayout">
+      <img class="project" src="images/Replit/Jeopardy.png" alt="Jeopardy">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">Jeopardy</h3>
+      <button onclick="location.href='projects.html'">Explore</button>
+    </div>
+
+    <!-- Steak -->
+    <div class="projectLayout">
+      <img class="project" src="images/Replit/Steak.png" alt="Let's Cut the Steak!">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">Cut the Steak!</h3>
+      <button onclick="location.href='projects.html'">Explore</button>
+    </div>
+
+    <!-- Tesla Website -->
+    <div class="projectLayout">
+      <img class="project" src="images/Replit/Tesla.jpg" alt="Tesla">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">Tesla Website</h3>
+      <button onclick="location.href='projects.html'">Explore</button>
+    </div>
+
+    <!-- To-Do -->
+    <div class="projectLayout">
+      <img class="project" src="images/Replit/To-Do.png" alt="To-Do">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
+        alt="Vignette">
+      <h3 class="overlay">To-Do</h3>
+      <button onclick="location.href='projects.html'">Explore</button>
+    </div>
+  </div>
+</body>
+
+<!-- <h1 class="title">Archived Stuff</h1> -->
+
+<!-- Archived Projects -->
+<!-- <div class="horizontalLayout" style="height: 300px;"> -->
+<!-- Escape Rooms -->
+<!-- <div class="projectLayout">
       <img class="project" src="images/Escape.png" alt="Virtual Escape Room">
       <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
         alt="Vignette">
       <h3 class="overlay">Escape Rooms</h3>
       <button onclick="location.href='archived.html'">Explore</button>
-    </div>
+    </div> -->
 
-    <!-- Chatbot -->
-    <div class="projectLayout">
+<!-- Chatbot -->
+<!-- <div class="projectLayout">
       <img class="project" src="images/Steve-chatbot-logo.png" alt="Chatbot">
       <img class="bottomVignette projectsVignette" src="images/Vignette.png" alt="Vignette">
       <h3 class="overlay">Chatbot</h3>
       <button onclick="location.href='archived.html#Chatbot'">Explore</button>
-    </div>
+    </div> -->
 
-    <!-- CLI-Calculator -->
-    <div class="projectLayout">
+<!-- CLI-Calculator -->
+<!-- <div class="projectLayout">
       <img class="project" src="images/CLI-Calculator.png" alt="Command-Line Calculator">
       <img class="bottomVignette projectsVignette" src="images/Vignette.png" alt="Vignette">
       <h3 class="overlay">CLI-Calculator</h3>
       <button onclick="location.href='archived.html#CLI-Calculator'">Explore</button>
-    </div>
+    </div> -->
 
-    <!-- eCal -->
-    <div class="projectLayout">
+<!-- eCal -->
+<!-- <div class="projectLayout">
       <img class="project" src="images/eCal.png" alt="eCal">
       <img class="bottomVignette projectsVignette" src="images/Vignette.png" alt="Vignette">
       <h3 class="overlay">eCal</h3>
       <button onclick="location.href='archived.html#eCal'">Explore</button>
-    </div>
+    </div> -->
 
-    <!-- Drift Party -->
-    <div class="projectLayout">
+<!-- Drift Party -->
+<!-- <div class="projectLayout">
       <img class="project" src="images/DriftParty.png" alt="Drift Party">
       <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-right-radius: 25px;"
         alt="Vignette">
       <h3 class="overlay">Drift Party</h3>
       <button onclick="location.href='archived.html#DriftParty'">Explore</button>
     </div>
-  </div>
-</body>
+  </div> -->
 
 </html>
