--- a/index.html
+++ b/index.html
@@ -30,52 +30,68 @@
   <h1 class="title">Projects</h1>
 
   <!--  Projects -->
-  <div class="horizontalLayout" style="height: 300px;">
+  <div class="horizontalLayout" style="height: 300px; justify-content: space-evenly;">
     <!-- Clickity Calculator -->
     <div class="projectLayout">
       <img class="project" src="images/Replit/Calculator.png" alt="Clickity Calculator">
-      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
-        alt="Vignette">
-      <h3 class="overlay">Clickity Calculator</h3>
-      <button onclick="location.href='projects.html'">Explore</button>
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
+      <h3 class="overlay" style="font-size: 30px">Clickity Calculator</h3>
+      <button style="position: absolute; margin-top: 225px;"
+        onclick="location.href='projects.html#ClickityCalculator'">Explore</button>
     </div>
 
     <!-- Jeopardy -->
     <div class="projectLayout">
       <img class="project" src="images/Replit/Jeopardy.png" alt="Jeopardy">
-      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
-        alt="Vignette">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
       <h3 class="overlay">Jeopardy</h3>
-      <button onclick="location.href='projects.html'">Explore</button>
+      <button style="position: absolute; margin-top: 225px;"
+        onclick="location.href='projects.html#Jeopardy'">Explore</button>
     </div>
 
     <!-- Steak -->
     <div class="projectLayout">
       <img class="project" src="images/Replit/Steak.png" alt="Let's Cut the Steak!">
-      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
-        alt="Vignette">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
       <h3 class="overlay">Cut the Steak!</h3>
-      <button onclick="location.href='projects.html'">Explore</button>
+      <button style="position: absolute; margin-top: 225px;"
+        onclick="location.href='projects.html#CutTheSteak'">Explore</button>
     </div>
+  </div>
 
+  <div class="horizontalLayout" style="height: 300px; justify-content: space-evenly;">
     <!-- Tesla Website -->
     <div class="projectLayout">
       <img class="project" src="images/Replit/Tesla.jpg" alt="Tesla">
-      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
-        alt="Vignette">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
       <h3 class="overlay">Tesla Website</h3>
-      <button onclick="location.href='projects.html'">Explore</button>
+      <button style="position: absolute; margin-top: 225px;"
+        onclick="location.href='projects.html#Tesla'">Explore</button>
     </div>
 
     <!-- To-Do -->
     <div class="projectLayout">
       <img class="project" src="images/Replit/To-Do.png" alt="To-Do">
-      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
-        alt="Vignette">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
       <h3 class="overlay">To-Do</h3>
-      <button onclick="location.href='projects.html'">Explore</button>
+      <button style="position: absolute; margin-top: 225px;"
+        onclick="location.href='projects.html#ToDo'">Explore</button>
     </div>
-  </div>
+
+    <!-- fuseLearn Hub -->
+    <div class="projectLayout">
+      <img class="project" src="images/image.png" alt="Image">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
+      <h3 class="overlay">fuseLearn</h3>
+      <button style="position: absolute; margin-top: 225px;"
+        onclick="location.href='projects.html#fuseLearn'">Explore</button>
+    </div>
 </body>
 
 <!-- <h1 class="title">Archived Stuff</h1> -->
@@ -85,8 +101,8 @@
 <!-- Escape Rooms -->
 <!-- <div class="projectLayout">
       <img class="project" src="images/Escape.png" alt="Virtual Escape Room">
-      <img class="bottomVignette projectsVignette" src="images/Vignette.png" style="border-bottom-left-radius: 25px;"
-        alt="Vignette">
+      <img class="bottomVignette projectsVignette" src="images/Vignette.png"
+        style="border-bottom-left-radius: 25px; border-bottom-right-radius: 25px;" alt="Vignette">
       <h3 class="overlay">Escape Rooms</h3>
       <button onclick="location.href='archived.html'">Explore</button>
     </div> -->
