--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     </ul>
 
     <!-- Clickity Calculator -->
-    <div class="horizontalLayout">
+    <div id="ClickityCalculator" class="horizontalLayout">
 
         <!-- Main Image Section -->
         <div class="verticalLayout">
@@ -30,17 +30,15 @@
             <!-- Title -->
             <h2 class="titleInfo">Clickity Calculator</h2>
 
-            <div class="github-container">
+            <div class="button-container">
                 <!-- Replit -->
-                <button class="github" style="margin-right: 250px; background-color: #0e1525;"
-                    onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
-                    <img class="github" src="images/Replit/Replit.png">Replit
+                <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
+                    <img class="buttonIMG" src="images/Replit/Replit.png">Replit
                 </button>
 
                 <!-- Run -->
-                <button class="github" style="margin-left: 250px; background-color: rgb(49, 52, 74);"
-                    onclick="location.href='Replit/Calculator/index.html'">
-                    <img class="github" src="images/plus.png">Run
+                <button class="run" onclick="location.href='Replit/Calculator/index.html'">
+                    <img class="buttonIMG" src="images/plus.png">Run
                 </button>
             </div>
 
@@ -50,7 +48,7 @@
     </div>
 
     <!-- Jeopardy -->
-    <div class="horizontalLayout">
+    <div id="Jeopardy" class="horizontalLayout">
 
         <!-- Main Image Section -->
         <div class="verticalLayout">
@@ -63,17 +61,15 @@
             <!-- Title -->
             <h2 class="titleInfo">Jeopardy</h2>
 
-            <div class="github-container">
+            <div class="button-container">
                 <!-- Replit -->
-                <button class="github" style="margin-right: 250px; background-color: #0e1525;"
-                    onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
-                    <img class="github" src="images/Replit/Replit.png">Replit
+                <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
+                    <img class="buttonIMG" src="images/Replit/Replit.png">Replit
                 </button>
 
                 <!-- Run -->
-                <button class="github" style="margin-left: 250px; background-color: rgb(49, 52, 74);"
-                    onclick="location.href='Replit/Jeopardy/index.html'">
-                    <img class="github" src="images/plus.png">Run
+                <button class="run" onclick="location.href='Replit/Jeopardy/index.html'">
+                    <img class="buttonIMG" src="images/plus.png">Run
                 </button>
             </div>
 
@@ -83,7 +79,7 @@
     </div>
 
     <!-- Cut the Steak -->
-    <div class="horizontalLayout">
+    <div id="CutTheSteak" class="horizontalLayout">
 
         <!-- Main Image Section -->
         <div class="verticalLayout">
@@ -96,17 +92,15 @@
             <!-- Title -->
             <h2 class="titleInfo">Let's Cut the Steak!</h2>
 
-            <div class="github-container">
+            <div class="button-container">
                 <!-- Replit -->
-                <button class="github" style="margin-right: 250px; background-color: #0e1525;"
-                    onclick="location.href='https://replit.com/@JamesGouw/Lets-Cut-the-Steak'">
-                    <img class="github" src="images/Replit/Replit.png">Replit
+                <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Lets-Cut-the-Steak'">
+                    <img class="buttonIMG" src="images/Replit/Replit.png">Replit
                 </button>
 
                 <!-- Run -->
-                <button class="github" style="margin-left: 250px; background-color: rgb(49, 52, 74);"
-                    onclick="location.href='Replit/Steak/index.html'">
-                    <img class="github" src="images/plus.png">Run
+                <button class="run" onclick="location.href='Replit/Steak/index.html'">
+                    <img class="buttonIMG" src="images/plus.png">Run
                 </button>
             </div>
 
@@ -116,7 +110,7 @@
     </div>
 
     <!-- Tesla Website -->
-    <div class="horizontalLayout">
+    <div id="Tesla" class="horizontalLayout">
 
         <!-- Main Image Section -->
         <div class="verticalLayout">
@@ -129,17 +123,15 @@
             <!-- Title -->
             <h2 class="titleInfo">Tesla Website</h2>
 
-            <div class="github-container">
+            <div class="button-container">
                 <!-- Replit -->
-                <button class="github" style="margin-right: 250px; background-color: #0e1525;"
-                    onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
-                    <img class="github" src="images/Replit/Replit.png">Replit
+                <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
+                    <img class="buttonIMG" src="images/Replit/Replit.png">Replit
                 </button>
 
                 <!-- Run -->
-                <button class="github" style="margin-left: 250px; background-color: rgb(49, 52, 74);"
-                    onclick="location.href='Replit/Tesla/index.html'">
-                    <img class="github" src="images/plus.png">Run
+                <button class="run" onclick="location.href='Replit/Tesla/index.html'">
+                    <img class="buttonIMG" src="images/plus.png">Run
                 </button>
             </div>
 
@@ -149,7 +141,7 @@
     </div>
 
     <!-- To-Do Website -->
-    <div class="horizontalLayout">
+    <div id="ToDo" class="horizontalLayout">
 
         <!-- Main Image Section -->
         <div class="verticalLayout">
@@ -162,17 +154,15 @@
             <!-- Title -->
             <h2 class="titleInfo">To-Do</h2>
 
-            <div class="github-container">
+            <div class="button-container">
                 <!-- Replit -->
-                <button class="github" style="margin-right: 250px; background-color: #0e1525;"
-                    onclick="location.href='https://replit.com/@JamesGouw/To-Do-Page'">
-                    <img class="github" src="images/Replit/Replit.png">Replit
+                <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/To-Do-Page'">
+                    <img class="buttonIMG" src="images/Replit/Replit.png">Replit
                 </button>
 
                 <!-- Run -->
-                <button class="github" style="margin-left: 250px; background-color: rgb(49, 52, 74);"
-                    onclick="location.href='Replit/To-Do/index.html'">
-                    <img class="github" src="images/plus.png">Run
+                <button class="run" onclick="location.href='Replit/To-Do/index.html'">
+                    <img class="buttonIMG" src="images/plus.png">Run
                 </button>
             </div>
 
@@ -181,8 +171,38 @@
         </div>
     </div>
 
+    <!-- fuseLearn Hub -->
+    <div id="fuseLearn" class="horizontalLayout">
+
+        <!-- Main Image Section -->
+        <div class="verticalLayout">
+            <!-- eCal Image -->
+            <img class="mainImg" src="images/image.png" alt="Image">
+        </div>
+
+        <!-- Details -->
+        <div class="verticalLayout">
+            <!-- Title -->
+            <h2 class="titleInfo">fuseLearn Hub</h2>
+
+            <div class="button-container">
+                <!-- Hackathon -->
+                <button class="hackathon" onclick="location.href='https://foresthacks.devpost.com'">Hackathon
+                    Details</button>
+
+                <!-- Run -->
+                <button class="run" onclick="location.href='hackathons/fuseLearn/home/fuseLearn.html'">
+                    <img class="buttonIMG" src="images/plus.png">Run
+                </button>
+            </div>
+
+            <!-- Description -->
+            <h4 class="bodyText">A hub for educational tools bu Rishaan K. [Hackathon] [In Development]</h4>
+        </div>
+    </div>
+
     <!-- eCal -->
-    <div class="horizontalLayout">
+    <div id="eCal" class="horizontalLayout">
 
         <!-- Main Image Section -->
         <div class="verticalLayout">
@@ -196,7 +216,7 @@
             <h2 class="titleInfo">The New eCal</h2>
 
             <!-- Description -->
-            <h4 class="bodyText">eCal, a simple calculator by Rishaan K. [COMING SOON]</h4>
+            <h4 class="bodyText">eCal, a simple calculator by Rishaan K. [Coming Soon]</h4>
         </div>
     </div>
 </body>
