--- a/hackathons/fuseLearn/notepad/notepad.html
+++ b/hackathons/fuseLearn/notepad/notepad.html
@@ -27,7 +27,7 @@
             <p>Autosaving on</p>
         </div>
 
-        <p style="font-family: Helvetica; color: white;">Icons from https://icons8.com/</p>
+        <p>Icons from https://icons8.com/</p>
     </div>
 
     <script src="notepad.js"></script>
