--- a/hackathons/fuseLearn/calculator/calculator.html
+++ b/hackathons/fuseLearn/calculator/calculator.html
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <p style="font-family: Helvetica; color: white;">Icons from https://icons8.com/</p>
+    <p>Icons from https://icons8.com/</p>
   </div>
   <script src="calculator.js"></script>
 </body>
