another bug fix lol

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="horizontalLayout">
-      <div class="bullet" onclick="location.href='../projects/projects.html'">projects</div>
+      <div class="bullet" onclick="location.href='projects.html'">projects</div>
       <div class="bullet">•</div>
       <div class="bullet">about (coming soon)</div>
     </div>
