--- a/projects.html
+++ b/projects.html
@@ -23,59 +23,59 @@
       <div class="mainTitle">S</div>
     </div>
 
-    <div class="bullet" onclick="location.href='../home/home.html'">home</div>
+    <div class="bullet" onclick="location.href='index.html'">home</div>
 
     <div class=" horizontalLayout" class="projectContainer">
       <!-- clickity calculator -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/calculator.png">
+        <img class="projectIMG" src="images/calculator.png">
         <div class="projectTitle">clickity calculator</div>
         <div class="projectDetail">a basic calculator (school group project), (I have implemented a better version of
           this in fuseLearn)</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
-          <img class="buttonIMG" src="../images/replit.png">Replit
+          <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='../replit/Calculator/index.html'">
-          <img class="buttonIMG" src="../images/play.png">run
+        <button class="basic" onclick="location.href='replit/Calculator/index.html'">
+          <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
 
       <!-- jeopardy -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/money.png">
+        <img class="projectIMG" src="images/money.png">
         <div class="projectTitle">jeopardy</div>
         <div class="projectDetail">jeopardy game (school group project)</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
-          <img class="buttonIMG" src="../images/replit.png">Replit
+          <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='../replit/Jeopardy/index.html'">
-          <img class="buttonIMG" src="../images/play.png">run
+        <button class="basic" onclick="location.href='replit/Jeopardy/index.html'">
+          <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
 
       <!-- cut the steak -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/steak.png">
+        <img class="projectIMG" src="images/steak.png">
         <div class="projectTitle">cut the steak</div>
         <div class="projectDetail">cooking game (school group project)</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Lets-Cut-the-Steak'">
-          <img class="buttonIMG" src="../images/replit.png">Replit
+          <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='../replit/Steak/index.html'">
-          <img class="buttonIMG" src="../images/play.png">run
+        <button class="basic" onclick="location.href='replit/Steak/index.html'">
+          <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
 
       <!-- Tesla website -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/car.png">
+        <img class="projectIMG" src="images/car.png">
         <div class="projectTitle">Tesla website</div>
         <div class="projectDetail">Tesla website copy (school group project)</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
-          <img class="buttonIMG" src="../images/replit.png">Replit
+          <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='../replit/Tesla/index.html'">
-          <img class="buttonIMG" src="../images/play.png">run
+        <button class="basic" onclick="location.href='replit/Tesla/index.html'">
+          <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
     </div>
@@ -83,38 +83,38 @@
     <div class=" horizontalLayout" class="projectContainer" style="margin-top: 50px">
       <!-- to-do -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/tasks.png">
+        <img class="projectIMG" src="images/tasks.png">
         <div class="projectTitle">to-do</div>
         <div class="projectDetail">to-do task website (school group project), (I have implemented a better version of
           this in fuseLearn)</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
-          <img class="buttonIMG" src="../images/replit.png">Replit
+          <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='../replit/Tesla/index.html'">
-          <img class="buttonIMG" src="../images/play.png">run
+        <button class="basic" onclick="location.href='replit/Tesla/index.html'">
+          <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
 
       <!-- fuseLearn -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/broken-robot.png">
+        <img class="projectIMG" src="images/broken-robot.png">
         <div class="projectTitle">fuseLearn</div>
         <div class="projectDetail">hackathon project, learning hub full of tools</div>
         <button class="basic" onclick="location.href='https://foresthacks.devpost.com'">
-          <img class="buttonIMG" src="../images/link.png">hackathon
+          <img class="buttonIMG" src="images/link.png">hackathon
         </button>
         <button class="basic" onclick="location.href='hackathons/fuseLearn/home/fuseLearn.html'">
-          <img class="buttonIMG" src="../images/play.png">run
+          <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
 
       <!-- misc -->
       <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="../images/more.png">
+        <img class="projectIMG" src="images/more.png">
         <div class="projectTitle">more</div>
         <div class="projectDetail">a bunch of misc projects can be found on my Github</div>
         <button class="github" onclick="location.href='https://github.com/rishaank'">
-          <img class="buttonIMG" src="../images/github-icon.png">Github
+          <img class="buttonIMG" src="images/github-icon.png">Github
         </button>
       </div>
     </div>
