added tab names

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Portfolio, Technology, Tech, Coding">
   <meta name="description" content="Rishaan's Portfolio">
-  <title>About</title>
+  <title>Rishaan | Projects</title>
   <link rel="stylesheet" type="text/css" href="projects.css">
 </head>
 
