--- a/hackathons/fuseLearn/tasks/tasks.html
+++ b/hackathons/fuseLearn/tasks/tasks.html
@@ -13,7 +13,7 @@
     <img class="back" src="../images/back.png" alt="Back" onclick="location.href='../home/fuseLearn.html'">
     <div class="blurBox">
         <div class="title" style="margin-bottom: 0;">Tasks</div>
-        <div class="subTitle" style="margin-top: 0;">Double click a task to mark it as completed</div>
+        <div class="subTitle" style="margin-top: 0;">Click a task to toggle completion, double click to delete it.</div>
 
         <div class="horizontalLayout" style="column-gap: 20px">
             <input type="text" placeholder="Type in your task's name" id="todo-entry-box" />
