--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 
     <div class="bullet" onclick="location.href='index.html'">home</div>
 
-    <div class=" horizontalLayout" class="projectContainer">
+    <div class="horizontalLayout projectContainer">
       <!-- clickity calculator -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/calculator.png">
@@ -78,9 +78,7 @@
           <img class="buttonIMG" src="images/play.png">run
         </button>
       </div>
-    </div>
 
-    <div class=" horizontalLayout" class="projectContainer" style="margin-top: 50px">
       <!-- to-do -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/tasks.png">
@@ -120,7 +118,6 @@
     </div>
 
     <div class="footer">Some Icons from https://icons8.com/</div>
-  </div>
   </div>
 </body>
 
